Verbesserung Layout: Listen reagieren mit Umbruch bei zu schmaler Seite

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -17,16 +17,23 @@ h5,
 .h5
   font-weight: bold
 
+.heading
+  margin-top: 10px
+
 .modal-header .glyphicon
   padding-right: 0.5em
 
 .panel-body.list-group
   padding: 0
 
-nav
-  //&.navbar-fixed-top
-    font-size: $font-size-large
+.right-badges
+  > .badge
+    float: right
 
+    + .badge
+      margin-right: 5px
+
+nav
   &.navbar-fixed-bottom
     .btn-group
       padding-top: 0.5em
