--- a/app/views/requests/_index.html.erb
+++ b/app/views/requests/_index.html.erb
@@ -6,19 +6,27 @@
     </div>
     <% if @requests.present? -%>
       <div class="list-group">
-        <!--<div class="list-group-item">
-          <div class="row">
-            <div class="col-md-1 col-md-offset-1">#</div>
-            <div class="col-md-10">Titel</div>
-          </div>
-        </div>-->
         <% @requests.each do |req| -%>
           <%= link_to(req, remote: true, class: 'list-group-item') do %>
-            <%= image_tag(image_path(req.icon_list), alt: "#{ req.service.type }, #{ req.extended_attributes.detailed_status }") %>
-            #<%= req.id %>: <%= req.title %>
-            <%= mark_photo_required(req) %>
-            <%= mark_trust(req) %>
-            <span class="badge"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></span>
+            <div class="hidden-xs right-badges">
+              <%= image_tag(image_path(req.icon_list), alt: "#{ req.service.type }, #{ req.extended_attributes.detailed_status }") %>
+              #<%= req.id %>: <%= req.title %>
+              <%= mark_photo_required(req) %>
+              <%= mark_trust(req) %>
+              <span class="badge"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></span>
+            </div>
+            <div class="visible-xs right-badges">
+              <span class="list-group-item-heading">
+                <%= image_tag(image_path(req.icon_list), alt: "#{ req.service.type }, #{ req.extended_attributes.detailed_status }") %>
+                #<%= req.id %>
+                <%= mark_photo_required(req) %>
+                <%= mark_trust(req) %>
+              </span>
+              <span class="badge"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></span>
+              <div class="list-group-item-text heading">
+                <%= req.title %>
+              </div>
+            </div>
           <% end %>
         <% end -%>
       </div>
