Job-Status und Detail-Ansicht

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -21,13 +21,18 @@
   right: 0
 
   div.request
-    margin-bottom: 7em
-
-    div.browse
-      margin-bottom: 1em
+    margin-bottom: 5em
 
 .clickable
   cursor: pointer
 
 option.placeholder
   display: none
+
+.job-status
+  &.checked
+    color: #50c80f
+  &.unchecked
+    color: #ff3700
+  &.not_checkable
+    color: #000000
