--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -45,6 +45,10 @@ h5,
       padding-bottom: 0
 
 nav
+  &.navbar-fixed-bottom
+    .btn-group
+      padding-top: 0.5em
+
   .glyphicon
     padding-right: 0.4em
 
