Fix Redmine-Ticket #506: E-Mail-Felder für mobile Geräte besser auszeichnen.

--- a/app/views/abuses/_new.html.erb
+++ b/app/views/abuses/_new.html.erb
@@ -23,7 +23,7 @@
             <div class="form-group has-feedback has-clear">
               <div class="input-group">
                 <span class="input-group-addon">@</span>
-                <%= f.text_field(:author, class: 'form-control', placeholder: t('placeholder.email')) %>
+                <%= f.email_field(:author, class: 'form-control', placeholder: t('placeholder.email')) %>
               </div>
               <span class="glyphicon glyphicon-remove-circle form-control-feedback form-control-clear" aria-hidden="true"></span>
             </div>
