Fix: Keine Default-Success-Meldung erzeugen falls es ein Fehlerobjekt gibt. In den Ausgaben der Fehlermedungen wurde immer noch ein Erfolgstext mit angehängt.

--- a/app/views/application/_create.html.erb
+++ b/app/views/application/_create.html.erb
@@ -1,2 +1,2 @@
-<% @success ||= t('messages.success.confirmation') %>
+<% @success ||= t('messages.success.confirmation') unless @errors %>
 <%= render 'modal' %>
