--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -168,10 +168,9 @@ class KS.Layers
   constructor: (map) ->
     @active = 0
     @layers = []
-    for layer in <%= Settings::Map.wms_layers.to_json %>
+    for layer in <%= Settings::Map.wms_tile_layers.to_json %>
       do (layer, @layers) ->
         @layers.push new ol.layer.Tile
-          maxResolution: layer.max_resolution
           source: new ol.source.TileWMS
             url: layer.url
             params:
@@ -180,7 +179,17 @@ class KS.Layers
             attributions: [
               new ol.Attribution
                 html: layer.attribution
-            ]
+            ] if layer.attribution?
+          visible: layer.visible
+    for layer in <%= Settings::Map.wms_image_layers.to_json %>
+      do (layer, @layers) ->
+        @layers.push new ol.layer.Image
+          maxResolution: layer.max_resolution
+          source: new ol.source.ImageWMS
+            url: layer.url
+            params:
+              "LAYERS": layer.content
+              "FORMAT": layer.format
           visible: layer.visible
 
     @layers.push new ol.layer.Vector
