--- a/app/assets/javascripts/nav.coffee.erb
+++ b/app/assets/javascripts/nav.coffee.erb
@@ -1,3 +1,5 @@
+KS.auto_refresh_time = <%= Settings::AutoRefresh.timeout %>
+
 class KS.Nav
   constructor: ->
     @bar = $('body > nav .nav')
@@ -16,6 +18,16 @@ class KS.Nav
         parent.append content
 
       parent.show().children("div.#{ view }").show().siblings().hide()
+
+
+KS.autoRefresh = () ->
+    if $(KS.olMap.getViewport()).is(':visible')
+        KS.reloadFeatures()
+    else if KS.content().is(':visible')
+        KS.content().find('.glyphicon-refresh').parents(".clickable").click()
+
+    setTimeout(KS.autoRefresh, KS.auto_refresh_time)
+
 
 $ ->
   KS.nav = new KS.Nav
@@ -42,3 +54,5 @@ $ ->
     $.ajax
       url: $(@).data('target'),
       dataType: 'script'
+
+  setTimeout(KS.autoRefresh, KS.auto_refresh_time)
