--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -40,7 +40,7 @@ $ ->
 KS.autoRefresh = () ->
   if $(KS.olMap.getViewport()).is(':visible')
     KS.reloadFeatures()
-  else if KS.content().is(':visible')
-    KS.content().find('.glyphicon-refresh').parents(".clickable").click()
+  else if refreshIcon = KS.content().find('.glyphicon-refresh').is(':visible')
+    refreshIcon.parents(".clickable").click()
 
   setTimeout(KS.autoRefresh, KS.auto_refresh_time)
