--- a/app/views/requests/_show_panel_title_buttons.html.erb
+++ b/app/views/requests/_show_panel_title_buttons.html.erb
@@ -1,9 +1,9 @@
 <div class="right-badges pull-right">
-<span class="badge pull-right clickable" data-target="<%= request_path(request, id_list: @id_list) %>">
+<span class="badge pull-right clickable" data-target="<%= request_path(request, id_list: id_list) %>">
   <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 </span>
 
-<span class="badge pull-right clickable" data-target="<%= edit_request_path(request) %>">
+<span class="badge pull-right clickable" data-target="<%= edit_request_path(request, id_list: id_list) %>">
   <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 </span>
 
