Layout: Zoombutton für Touch-Geräte, Menü erst < 360px falten. (Redmine #500)

--- a/app/assets/stylesheets/bootstrap_and_override.sass
+++ b/app/assets/stylesheets/bootstrap_and_override.sass
@@ -1,5 +1,4 @@
-//$font-size-base: 12px
-$screen-sm-min: 610px
+$screen-sm-min: 360px
 @import "bootstrap-sprockets"
 @import "bootstrap"
 
@@ -52,9 +51,38 @@ nav
   .glyphicon
     padding-right: 0.4em
 
-    @media (min-width: $screen-sm-min) and (max-width: $screen-md-max)
+    @media (min-width: 610px) and (max-width: $screen-md-max)
       padding-left: 0.95em
       padding-right: 0.95em
+
+    @media (min-width: 551px) and (max-width: 609px)
+      padding-left: 0.75em
+      padding-right: 0.75em
+
+    @media (min-width: 506px) and (max-width: 550px)
+      padding-left: 0.55em
+      padding-right: 0.55em
+
+    @media (min-width: 461px) and (max-width: 505px)
+      padding-left: 0.35em
+      padding-right: 0.35em
+
+    @media (min-width: 416px) and (max-width: 460px)
+      padding-left: 0.15em
+      padding-right: 0.15em
+
+    @media (min-width: 382px) and (max-width: 416px)
+      padding-left: 0
+      padding-right: 0
+
+  @media (min-width: 360px) and (max-width: 381px)
+    .container
+      padding-left: 11px
+      padding-right: 11px
+
+    .nav > li > a
+      padding-left: 11px
+      padding-right: 11px
 
 @media (min-width: $screen-sm-min) and (max-width: $screen-md-max)
   .container
