--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -11,19 +11,16 @@
   right: 0
   top: 50px
 
-.ol-control button
-  font-size: $font-size-h3
-
-  @media (max-width: $screen-sm-max)
+.ol-touch .ol-control
+  button
     font-size: $font-size-h1
-
-  @media (max-width: $screen-md-max)
-    font-size: $font-size-h2
 
 .ol-scale-line-inner
   font-weight: bold
 
-.ol-attribution
+.ol-attribution,
+.ol-touch .ol-attribution
+
   ul
     font-size: $font-size-small
 
