--- a/app/views/votes/_new.html.erb
+++ b/app/views/votes/_new.html.erb
@@ -20,8 +20,11 @@
               <div class="btn-group" role="group">
                 <%= f.submit(t('buttons.submit'), class: 'btn btn-default btn-primary') %>
               </div>
-              <%= link_to(t('buttons.cancel'), @request, remote: true, class: 'btn btn-default', role: :button) %>
+              <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list], remote: true, class: 'btn btn-default', role: :button) %>
             </div>
+            <% @id_list.each do |idl| -%>
+              <%= f.hidden_field "id_list][", :value => idl, id: nil %>
+            <% end if @id_list -%>
           </div>
         </div>
       <% end %>
